Se agrega card de presentación a la vista home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,13 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="card mb-3" style="max-width: 100%;">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <%= image_tag 'imagen_teclado.png', class: 'tecl_img' %>
+        </div>
+    <div class="col-md-8">
+        <div class="card-body">
+            <h5 class="card-title">Alexandra Aguilar</h5>
+            <p class="card-text">FullStack Ruby on Rails Developer</p>
+            <p class="card-text">Aptitudes: Metodologías ágiles · Ruby on Rails · Ruby · PostgreSQL · Startup</p>
+        </div>
+    </div>
+</div>
