Se agrega a la vista de projects 3 cards con su respectiva imagen y descripción del proyecto con enlace al dar clic en ver más, además se personaliza estilo del boton ver más desde el application.css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,18 @@
  *= require_self
  */
 
+.card{
+    margin-top: 100px;
+}
+
 .tecl_img {
     width: 300px;
     height: 200px;
     margin-left: 20%;
+}
+
+#boton{
+    background-color: darkblue;
+    border-color: darkblue;
+    border-radius: 50px;
 }
